--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "eslint": "^8.5.0",
+    "eslint-plugin-react": "^7.27.1",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
